--- a/exercises/ex08/data_wrangling.ipynb
+++ b/exercises/ex08/data_wrangling.ipynb
@@ -605,11 +605,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -622,7 +620,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ef9ce00dae72cabbf4078e74bf70e49b9c45b8d14802ed0ba528578b24d97902"
+   }
   }
  },
  "nbformat": 4,
