--- a/lessons/ls22.ipynb
+++ b/lessons/ls22.ipynb
@@ -191,6 +191,36 @@
     "values: list[float] = masked(col_data[\"low\"], mask_b)\n",
     "print(mean(values))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mAttributeError: module 'profile' has no attribute 'run'. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Union\n",
+    "\n",
+    "def add(lhs: float = 0.0, rhs: Union[str, float] = 0.0) -> float:\n",
+    "    result: float = lhs\n",
+    "    if isinstance(rhs, str):\n",
+    "        result += float(rhs)\n",
+    "    else:\n",
+    "        result += rhs\n",
+    "    return result\n",
+    "\n",
+    "print(add(1.0, 2.0))"
+   ]
   }
  ],
  "metadata": {
