--- a/exercises/ex10/SimpyDemos.ipynb
+++ b/exercises/ex10/SimpyDemos.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
-    "__author__ = \"YOUR PID HERE\""
+    "__author__ = \"730609760\""
    ]
   },
   {
@@ -29,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autoreload of imported modules enabled. Be sure to save your work in other modules before refreshing cells.\n",
+      "<class 'Simpy.Simpy'> successfully imported.\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -55,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0, 1.0, 1.0, 1.0]\n"
+     ]
+    }
+   ],
    "source": [
     "ones = Simpy([1., 1., 1., 1., 1.])\n",
     "print(ones.values)"
@@ -78,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simpy([1.0, 1.0, 1.0, 1.0, 1.0])\n"
+     ]
+    }
+   ],
    "source": [
     "print(ones)"
    ]
@@ -103,9 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([2.0, 2.0, 2.0])  - Expected: Simpy([2.0, 2.0, 2.0])\n",
+      "Actual:  Simpy([2.0, 2.0, 2.0, 2.0, 2.0])  - Expected: Simpy([2.0, 2.0, 2.0, 2.0, 2.0])\n",
+      "Actual:  Simpy([3.0, 3.0, 3.0])  - Expected: Simpy([3.0, 3.0, 3.0])\n",
+      "Actual:  Simpy([2.0, 2.0])  - Expected: Simpy([2.0, 2.0])\n"
+     ]
+    }
+   ],
    "source": [
     "twos = Simpy([])\n",
     "twos.fill(2.0, 3)\n",
@@ -137,9 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([1.0, 2.0, 3.0, 4.0])  - Expected: Simpy([1.0, 2.0, 3.0, 4.0])\n",
+      "Actual:  Simpy([0.0, 0.25, 0.5, 0.75])  - Expected: Simpy([0.0, 0.25, 0.5, 0.75])\n",
+      "Actual:  Simpy([-1.0, -2.0, -3.0, -4.0])  - Expected: Simpy([-1.0, -2.0, -3.0, -4.0])\n"
+     ]
+    }
+   ],
    "source": [
     "positive = Simpy([])\n",
     "positive.arange(1.0, 5.0)\n",
@@ -165,9 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  3.0  - Expected: 3.0\n",
+      "Actual:  45.0  - Expected: 45.0\n"
+     ]
+    }
+   ],
    "source": [
     "ones = Simpy([1.0, 1.0, 1.0])\n",
     "print(\"Actual: \", ones.sum(), \" - Expected: 3.0\")\n",
@@ -213,9 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([3.0, 4.0, 5.0])  - Expected: Simpy([3.0, 4.0, 5.0])\n",
+      "Actual:  Simpy([2.0, 2.0, 2.0])  - Expected: Simpy([2.0, 2.0, 2.0])\n",
+      "Actual:  Simpy([4.0, 6.0, 8.0])  - Expected: Simpy([4.0, 6.0, 8.0])\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy + Simpy\n",
     "\n",
@@ -229,9 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([11.0, 12.0, 13.0])  - Expected: Simpy([11.0, 12.0, 13.0])\n",
+      "Actual:  Simpy([2.0, 3.0, 4.0])  - Expected: Simpy([2.0, 3.0, 4.0])\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy + float\n",
     "a = Simpy([1.0, 2.0, 3.0])\n",
@@ -270,9 +344,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([2.0, 4.0, 8.0])  - Expected: Simpy([2.0, 4.0, 8.0])\n",
+      "Actual:  Simpy([4.0, 4.0, 4.0])  - Expected: Simpy([4.0, 4.0, 4.0])\n",
+      "Actual:  Simpy([1.0, 4.0, 27.0])  - Expected: Simpy([1.0, 4.0, 27.0])\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy ** Simpy\n",
     "\n",
@@ -286,9 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([1.0, 4.0, 9.0])  - Expected: Simpy([1.0, 4.0, 9.0])\n",
+      "Actual:  Simpy([1.0, 8.0, 27.0])  - Expected: Simpy([1.0, 8.0, 27.0])\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy ** float\n",
     "\n",
@@ -315,11 +408,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simpy([1.0, 2.0, 4.0, 8.0, 16.0, 32.0, 64.0, 128.0, 256.0, 512.0, 1024.0, 2048.0, 4096.0, 8192.0, 16384.0, 32768.0])\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Check #1 for Understanding\n"
+    "# TODO: Check #1 for Understanding\n",
+    "a = Simpy([])\n",
+    "a.fill(2.0, 16)\n",
+    "b = Simpy([])\n",
+    "b.arange(0.0, 16.0)\n",
+    "print(a ** b)"
    ]
   },
   {
@@ -356,9 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  [True, True, False, True]  - Expected: [True, True, False, True]\n",
+      "Actual:  [True, True, True, True]  - Expected: [True, True, True, True]\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy == Simpy\n",
     "\n",
@@ -371,9 +486,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  [True, False, True, False]  - Expected: [True, False, True, False]\n",
+      "Actual:  [False, True, False, False]  - Expected: [False, True, False, False]\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy == float\n",
     "\n",
@@ -415,9 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  [False, True, True, False]  - Expected: [False, True, True, False]\n",
+      "Actual:  [True, False, False, True]  - Expected: [True, False, False, True]\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy > Simpy\n",
     "\n",
@@ -430,9 +563,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  [False, False, True, True]  - Expected: [False, False, True, True]\n",
+      "Actual:  [False, False, False, True]  - Expected: [False, False, False, True]\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell tests a Simpy > float\n",
     "\n",
@@ -471,9 +613,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  10.0  - Expected: 10.0\n",
+      "Actual:  20.0  - Expected: 20.0\n",
+      "Actual:  30.0  - Expected: 30.0\n"
+     ]
+    }
+   ],
    "source": [
     "a = Simpy([10.0, 20.0, 30.0])\n",
     "print(\"Actual: \", a[0], \" - Expected: 10.0\")\n",
@@ -520,9 +672,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:  Simpy([3.0, 4.0])  - Expected: Simpy([3.0, 4.0])\n",
+      "Actual:  Simpy([1.0, 1.0])  - Expected: Simpy([1.0, 1.0])\n"
+     ]
+    }
+   ],
    "source": [
     "a = Simpy([1.0, 2.0, 3.0, 4.0, 2.0, 1.0])\n",
     "b = a[a > 2.0]\n",
@@ -543,27 +704,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "max_temps = Simpy([21.0, 30.0, 41.0, 31.0, 45.0, 31.5])\n",
     "precip = Simpy([0.0, 1.5, 0.1, 0.3, 0.2, 0.8])\n",
     "\n",
-    "# TODO: Your solution goes here."
+    "print(sum(precip[max_temps > 32.0]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.3 64-bit ('3.10.3')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -577,11 +739,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "753bbf2db555ed67c0c563c87a15e570f057d104fc34ea0be00c622b1cb3541b"
+    "hash": "ef9ce00dae72cabbf4078e74bf70e49b9c45b8d14802ed0ba528578b24d97902"
    }
   }
  },
